@@ -7,6 +7,11 @@ CHANGES
 
 - fixed #238579 / #163149: error with unicode traversing
 - fixed #221025 : adding menu is sorted with translated item
+- fixed #227617 :
+    - prevent the namechooser from failing on '+', '@' and '/'
+    - added tests in the namechooser
+    - be sure the name chooser returns unicode
+
 
 3.6.0 (2008-05-06)
 ------------------
